--- a/src/index.css
+++ b/src/index.css
@@ -47,9 +47,9 @@ img {
   height: auto;
 }
 
-.App {
+/* .App {
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 16px;
   padding-bottom: 24px;
-}
+} */
