--- a/src/components/ProductsPage/ProductPage.module.css
+++ b/src/components/ProductsPage/ProductPage.module.css
@@ -10,3 +10,7 @@
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-gap: 24px;
 }
+
+.productTitle {
+  text-align: center;
+}
