--- a/src/components/ShoppingBasket/BasketItem.module.css
+++ b/src/components/ShoppingBasket/BasketItem.module.css
@@ -1,12 +1,12 @@
 .productName {
+  margin: 0;
   font-size: 20px;
 }
 
 .productCost {
   font-size: 16px;
   font-weight: bold;
-  color: #2196f3;
-  /* text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; */
+  color: #0077d6;
 }
 
 .basketItem {
@@ -48,7 +48,7 @@
   align-items: center;
   justify-content: center;
   color: #fff;
-  background-color: #2196f3;
+  background-color: #f3518e;
   border: 0;
   outline: 0;
   padding: 8px 24px;
@@ -67,7 +67,7 @@
 
 .productButton:hover {
   box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.15);
-  background-color: #1976d2;
+  background-color: #ea1568;
 }
 
 .button__icon {
