--- a/src/components/ShoppingBasket/BasketItem.module.css
+++ b/src/components/ShoppingBasket/BasketItem.module.css
@@ -62,7 +62,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 16px;
-  width: calc(100% - 16px);
+  width: 100%;
 }
 
 .productButton:hover {
@@ -70,6 +70,47 @@
   background-color: #ea1568;
 }
 
+.productButton:active {
+  top: 1px;
+  left: 1px;
+  box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.3), 0 1px 1px #fff,
+    inset 0 1px 2px rgba(0, 0, 0, 0.8), inset 0 -1px 0 rgba(0, 0, 0, 0.05);
+}
+
 .button__icon {
   margin-right: 8px;
+}
+
+.quantityBlock {
+  margin-top: 5px;
+  display: flex;
+  font-size: 20px;
+}
+
+.quantityArrowMinus,
+.quantityArrowPlus {
+  cursor: pointer;
+  font-size: 20px;
+  padding: 5px 12px;
+  width: 40px;
+  box-sizing: border-box;
+  border-radius: 4px;
+  border-color: #fff;
+  background-color: #f3518e;
+  color: #fff;
+  outline: none;
+}
+
+.quantityArrowMinus:hover,
+.quantityArrowPlus:hover {
+  background-color: #ea1568;
+}
+
+.quantityNum {
+  border-color: lightgrey;
+  width: 72px;
+  font-size: 18px;
+  padding: 4px 6px;
+  border-radius: 4px;
+  outline: none;
 }
