--- a/src/components/ProductsPage/ProductItem.module.css
+++ b/src/components/ProductsPage/ProductItem.module.css
@@ -25,7 +25,12 @@
   font-size: 12px;
   position: absolute;
   color: red;
-  top: 150px;
+  top: 76px;
+  font-weight: 500;
+  background-color: rgba(255, 255, 255, 0.95);
+  transform: rotate(8deg);
+  border: 1px dashed red;
+  padding: 2px;
 }
 
 .boughtAmount {
