--- a/src/components/ShoppingBasket/BasketItem.module.css
+++ b/src/components/ShoppingBasket/BasketItem.module.css
@@ -13,7 +13,12 @@
   font-size: 12px;
   position: absolute;
   color: red;
-  top: 142px;
+  top: 76px;
+  font-weight: 500;
+  background-color: rgba(255, 255, 255, 0.95);
+  transform: rotate(8deg);
+  border: 1px dashed red;
+  padding: 2px;
 }
 
 .basketItem {
